fix: fixed header height and header spacing in the main-layout

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,8 +1,21 @@
 /* header.component.css */
+header {
+  width: 100%;
+  /* height: 60px; */
+  background: var(--AZUL-DEGRADADO, linear-gradient(181deg, rgba(0, 240, 255, 0.20) -60.23%, rgba(0, 6, 20, 0.20) 47.03%), linear-gradient(180deg, rgba(0, 5, 19, 0.20) 54.48%, rgba(161, 153, 210, 0.20) 182.45%), #000615);
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+}
+
 nav {
   /* height : 60px; */
   width  : 100%;
   /* padding: 10px; */
+}
+
+.space-required {
+  height: 64px;
 }
 
 /* --------------------------- */
