--- a/src/app/shared/main-layout/main-layout.component.css
+++ b/src/app/shared/main-layout/main-layout.component.css
@@ -8,20 +8,12 @@
   background-color: #1e1e2f;
 } */
 
-router-outlet {
+/* router-outlet {
   flex-grow: 1;
   padding: 20px;
   background-color: red;
-}
+} */
 
-app-header {
-  width: 100%;
-  height: 60px;
-  background: var(--AZUL-DEGRADADO, linear-gradient(181deg, rgba(0, 240, 255, 0.20) -60.23%, rgba(0, 6, 20, 0.20) 47.03%), linear-gradient(180deg, rgba(0, 5, 19, 0.20) 54.48%, rgba(161, 153, 210, 0.20) 182.45%), #000615);
-  position: fixed;
-  top: 0;
-  z-index: 1000;
-}
 app-home{
   width: 100%;
   height: 100%;
